--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,10 +10,10 @@ jobs:
     steps:
 
       - name: Checkout source code
-      - uses: actions/checkout@v3
-      - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t joshhunt/frontend -f Dockerfile.dev .
-      - run: docker run -e CI=true joshhunt/frontend npm run test
+        uses: actions/checkout@v3
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        run: docker build -t joshhunt/frontend -f Dockerfile.dev .
+        run: docker run -e CI=true joshhunt/frontend npm run test
  
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
