--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,7 @@ name: Deploy Frontend
 on:
   push:
     branches:
-      - master # check your repo, your default branch might be master!
+      - master
  
 jobs:
   build:
@@ -11,10 +11,16 @@ jobs:
 
       - name: Checkout source code
         uses: actions/checkout@v3
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Log in to Docker Hub
+        run: docker login -u "${{ secrets.DOCKER_USERNAME }}" -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Docker image
         run: docker build -t joshhunt/frontend -f Dockerfile.dev .
+
+      - name: Run tests
         run: docker run -e CI=true joshhunt/frontend npm run test
- 
+
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
  
