--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,8 +12,8 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v3
 
-      - name: Log in to Docker Hub
-        run: docker login -u "${{ secrets.DOCKER_USERNAME }}" -p ${{ secrets.DOCKER_PASSWORD }}
+      #- name: Log in to Docker Hub
+      #  run: docker login -u "${{ secrets.DOCKER_USERNAME }}" -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
         run: docker build -t joshhunt/frontend -f Dockerfile.dev .
